Align operational ranges and preserve category order